# Keyboard

./: dependencies.txt  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/dictionaries/: ru_RU.aff
app/src/main/cpp/: CMakeLists.txt  hunspell_jni.cpp
app/src/main/java/com/example/keyboard/: Keyboard.kt  KeyboardNumbers.kt  KeyboardSpecialCharacters.kt  Language.kt  MainActivity.kt
app/src/main/java/com/example/keyboard/animation/: voiceInputAnimation.kt
app/src/main/java/com/example/keyboard/sentenceClassifier/: SentenceClassifier.kt
app/src/main/java/com/example/keyboard/spellChecker/: SpellChecker.kt  spellChecker.kt  spellCheckerService.kt
app/src/main/java/com/example/keyboard/voice/: Microphone.kt  requestActivity.kt  requestMicrophone.kt
app/src/main/java/com/example/keyboard/voskRecognizer/: voskRecognizer.kt
app/src/main/java/com/example/keyboard/wav/: wavRecorder.kt
app/src/main/res/drawable/: button_main.xml  button_not_press.xml  button_press.xml  delete_icon.xml  delete_icon_for_russian.xml  up_arrow.xml  up_arrow_full.xml  up_arrow_one.xml
app/src/main/res/layout/: activity_main.xml  container_layout.xml  keyboard_layout.xml  keyboard_numbers_layout.xml  keyboard_ru_layout.xml  keyboard_special_characters_layout.xml  punctuation_popup_layout.xml  voice_input_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: method.xml  spellchecker.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
